# pathway-abstract-classifier

./: .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  README.md  Tutorial.ipynb  app.py  baseline.ipynb  codecov.yml  demo_model_kaggle.ipynb  demo_model_original.ipynb  dev-requirements.txt  final-val-test-check.ipynb  out.html  pyproject.toml  requirements.txt  test.sh
.github/workflows/: ci-cd.yml  ci.yml  python-app.yml
Data/: test_data.tsv  top_losses_cl.tsv
archive/: Description.txt  README.md  cleanlab-trial3.ipynb  pr-curve.ipynb  train_model_kaggle.ipynb
notebooks/: tutorial.ipynb
pathway_abstract_classifier/: classify_article.py  pathway_abstract_classifier.py  test.py
tests/: load.py  test_classifier.py  test_integration_classifier.py  test_model.py
tests/data/: citations.json  citations_100.json  citations_1000.json  docs.json  explain.html
